RESOLVED FIXED 281913
[WebXR] Fix watchOS build
https://bugs.webkit.org/show_bug.cgi?id=281913
Summary [WebXR] Fix watchOS build
Mike Wyrzykowski
Reported 2024-10-22 11:53:47 PDT
[WebXR] Fix watchOS build
Attachments
Mike Wyrzykowski
Comment 1 2024-10-22 11:54:00 PDT
Mike Wyrzykowski
Comment 2 2024-10-22 11:59:11 PDT
EWS
Comment 3 2024-10-22 12:42:41 PDT
Committed 285566@main (1c1271e2c7bd): <https://commits.webkit.org/285566@main> Reviewed commits have been landed. Closing PR #35578 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.