[WebXR] Fix watchOS build https://bugs.webkit.org/show_bug.cgi?id=281913 rdar://138417050

Unreviewed build fix for watchOS 10 -> watchOS 11 migration.

We don't need to compile this code for watchOS so exclude it
as we do for the simulator.

* Source/WebGPU/WebGPU/MetalSPI.h:
* Source/WebGPU/WebGPU/XRProjectionLayer.mm:
(WebGPU::XRProjectionLayer::startFrame):

Canonical link: https://commits.webkit.org/285566@main